--- a/workshop/content/chaos-metrics.adoc
+++ b/workshop/content/chaos-metrics.adoc
@@ -152,6 +152,11 @@ Adding **sum()** function, the query returns the total of requests within the na
 
 ====
 
+[TIP]
+====
+**Grafana** allows to use https://prometheus.io/docs/prometheus/latest/querying/functions/#functions[Functions like rate or increase, etc...]
+====
+
 At the end, you should have the following expression in the the 'Metrics' field for the Query 'A'.
 
 image::images/grafana-number-total-promql.png[Grafana - Number Total Request PromQL,900]
@@ -185,7 +190,7 @@ Then, `*click on 'Visualization Settings' icon on the left hand sidebar and ente
 
 image::images/grafana-visualization-settings.png[Grafana - Home,500]
 
-Finally, `*click on the 'General Settings' icon and enter the following parameters:*`
+Next, `*click on the 'General Settings' icon and enter the following parameters:*`
 
 .General Settings
 [%header,cols=3*]
@@ -202,11 +207,15 @@ Finally, `*click on the 'General Settings' icon and enter the following paramete
 
 image::images/grafana-general-settings.png[Grafana - Home,500]
 
+Finally, `*click on the 'back arrow' icon at the top left-hand corner*`
+
+image::images/grafana-back-arrow.png[Grafana - Home,700]
+
 **Congratulations!!!** You just created your first Chaos Metric in a Grafana dashboard!
 
-image::images/grafana-number-total-singlestat.png[Grafana - Home,400]    
+image::images/grafana-number-total-singlestat.png[Grafana - Home,700]    
 
-**Grafana** allows to use https://prometheus.io/docs/prometheus/latest/querying/functions/#functions[Functions like rate or increase, etc...]
+`*Click on the 'disk' icon*` to save your work.
 
 == Create the Global Success Rate Metric (Optional)
 
@@ -281,7 +290,7 @@ Then, `*click on 'Visualization Settings' icon on the left hand sidebar and ente
 
 image::images/grafana-gsr-step2.png[Grafana - GSR setup ,900]
 
-Finally, `*click on the 'General Settings' icon and enter the following parameters:*`
+Next, `*click on the 'General Settings' icon and enter the following parameters:*`
 
 .General Settings
 [%header,cols=3*]
@@ -298,6 +307,8 @@ Finally, `*click on the 'General Settings' icon and enter the following paramete
 
 image::images/grafana-general-settings-step3.png[Grafana - Home,700]
 
+Finally, `*click on the 'back arrow' icon at the top left-hand corner then on the 'disk' icon*` to save your work.
+
 **Congratulations!** You just created your second Chaos Metric **Global Success Rate (non 5xx responses)** in a Grafana dashboard!
 
 
@@ -305,7 +316,13 @@ image::images/grafana-general-settings-step3.png[Grafana - Home,700]
 
 You just learnt how to create a Grafana Dashboard. Now, let's import the full Grafana Dashboard needed to the chaos experiments.
 
-`*Click on the following link, {DASHBOARD_GIT_URL}[Chaos Engineering Dashboard^, role='params-link'] and copy the content*`
+`*Click on the following button and copy the content*`
+
+[link={DASHBOARD_GIT_URL}]
+[window="_blank"]
+[role='params-link']
+image::images/chaos-dashboard-button.png[Chaos Dashboard - Button, 300]
+
 
 In {GRAFANA_URL}[Grafana^, role='params-link'], `*Click on  'plus (+) sign' > 'Import Dashboard' in the left hand side menu*`
 
@@ -315,9 +332,13 @@ Then, `*paste the JSON content and click on 'Load' > 'Import'*`
 
 image::images/grafana-load-dashboard.png[Grafana - Home,700]
 
-If you are receiving an error mentioning ** A dashboard in this folder with the same name already exists**  add  'user{USER_ID}'in the Name 
+
+[WARNING]
+====
+If you are receiving an error mentioning **"A dashboard in this folder with the same name already exists"**, `*please add 'user{USER_ID}' in the name*`. 
 
 image::images/error-import-grafana.png[Grafana import Error - Home,900]
+====
 
 You have now access the Chaos Engineering Dashboard.
 
